css/style.css
@media (min-width: 768px) {
    /* .mr-md-3, .mx-md-3 {
        margin-left: 1rem !important;
    } */
    .searchInput {
        margin-left: 1rem !important;
    }
}

.sideNavTitle {
    font-size: 18px;
}
.accordion-button {
    font-size: 18px;
}

#todayWeatherCol, #fiveDayWeatherCol {
    padding-left: 0rem;
    padding-right: 0rem;
}

#fiveDayView {
    display: inline-flex;
    flex-direction: row-reverse;
    width: fit-content;
}

.card {
    margin-left: 10px;
    margin-right: 10px;
}

.currentWeatherView{
    width: 14rem;
    max-width: 18rem;
}

.zipCodeMessage {
    height: 38px;
    width: 210px;
    color: red;
    text-align: center;
    position: absolute;
    top: 27px;
    font-size: 17px;
        /* margin-top: 10px; */
}

.hideZipCodeMessage {
    display: none;
}

.msgSpan {
    margin-top: 10px;
}

.sectiontitles {
    padding-left: 10px;
}

.currentCityTitle {
    color: white;
}

/* .weatherCard {
    padding-left: 10px;
} */

.weatherCard p {
    margin-bottom: 5px;
}

.currentWeatherTemp {
    font-size: 30px;
    font-weight: bold;
    padding-left: 10px;
    display: inline-flex;
    position: relative;
}

.currentWeatherValue  {
    font-size: 20px;
    font-weight: bold;
}

.fiveDayWeatherValue {
    font-size: 18px;
    font-weight: bold;
}

.fiveDayForecastValue {
    font-size: 15px;
    font-weight: bold;
}

.fiveDayTemperatureIcon, .fiveHumidityIcon  {
    padding-left: 10px;
}

.currentWeatherValue, .fiveDayWeatherValue {
    text-align: center;
}

.currentHumidityValue {
    padding-left: 25px;
    height: 45px;
    /* padding-top: 5px; */
    position: absolute;
    font-size: 25px;
    font-weight: bold;
    height: 45px;
    right: 0;
    top: 7px;
}

.searchHistory {
    background-color:#212529 !important; 
    /* color: white !important; */
    font-family: var(--bs-font-sans-serif);
    color: rgba(255, 255, 255, 0.25) !important;
    text-transform: uppercase;
}

.accordion-item {
    /* background-image: url(/weather_app_revamp/weather_app_refactor/assets/img/solid_white.svg) !important; */
    background-color: transparent !important;
}

.accordion-button:focus {
    box-shadow: none !important;
}

.accordion-button::after, .accordion-button:not(.collapsed)::after {
    filter: invert(99%) sepia(5%) saturate(18%) hue-rotate(144deg) brightness(104%) contrast(100%);
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23212529'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e") !important;
}
.currentWeatherView,.fiveDayCards {
    width: 200px;

}

.fiveDayDateContainer {
    display: inline-flex;
    justify-content: space-between;
    padding-left: 10px;
    padding-right: 10px;
    /* font-size: 15px; */
    font-weight: bold;
}
/* .fiveDayCards:first-child {
    display: none !important;
} */

.searchBarWrapper {
    display: inline-flex;
    width: 100%;
    position: relative;
    /* width: calc(100% - 15%); */
    /* margin-left: 39%; */
    /* width: 81%; */

}

.bufferBarRight {
    position: absolute;
    right: 0px;
    height: 100%;
    width: 225px;
    background-color: black;
}

.footerClass {
    /* width: calc(100% - 200px); */
    /* width: calc(82%); */
    width: 100%;

}

.footerContainerRight {
    padding-right: 225px;
}
.searchBarForm {
    /* margin-left: 1rem !important; */
    padding-right: 225px;
    position: relative;
    width: 45%;
}

.searchInput {
    display: flex !important;
    flex-wrap: nowrap !important;
    position: absolute !important;
    bottom: 0;
    margin-bottom: 10px;
    right: 205px;
    width: 225px !important;
}

.navbar {
    border-radius: 0px !important;
}

.main {
    width: 81%;
    padding-left: 10px;
}

.sideNavWidthContainer {
    min-width: 225px;
    /* min-width: calc(225px + 31px); */
}

.navLocationSwitchContainer {
    width: fit-content;
    display: flex;
    flex-direction: column;
    margin-bottom: 10px;
 } 

 .defaultLocationSwitchLabel, .savedLocationSwitchLabel {
    font-size: 18px;
    font-weight: 500;
 }

/* .navLocationSwitch {
    height: 2em;
    width: 4em !important;
    bottom: 27px;

} */

